Added classes for removing trend and seasonality.

--- a/notebooks/data_download.ipynb
+++ b/notebooks/data_download.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fa1093bb-9609-4adb-aca3-987a1012d44e",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,8 @@
     "\n",
     "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '..')))\n",
     "\n",
-    "from settings import DATA_DIR, logins"
+    "from settings import DATA_DIR\n",
+    "from private import logins"
    ]
   },
   {
@@ -139,8 +140,11 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "c7d2ea5cb834af680fe1992ab3be077b524a83f1c3c2f68522b740b1a6cb6491"
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.7 ('sst_model')",
    "language": "python",
    "name": "python3"
   },
